<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/profile_image_settings"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_settings"
        app:layout_constraintVertical_bias="0.04"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/new_pass_edit_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        app:layout_constraintEnd_toEndOf="@+id/old_pass_edit_settings"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/old_pass_edit_settings"
        app:layout_constraintTop_toBottomOf="@+id/old_pass_edit_settings" />

    <EditText
        android:id="@+id/repeat_pass_edit_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/new_pass_edit_settings"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/new_pass_edit_settings"
        app:layout_constraintTop_toBottomOf="@+id/new_pass_edit_settings"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/old_pass_edit_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        app:layout_constraintEnd_toEndOf="@+id/profile_image_settings"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/profile_image_settings"
        app:layout_constraintTop_toBottomOf="@+id/profile_image_settings" />

    <TextView
        android:id="@+id/old_pass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_pass"
        app:layout_constraintBottom_toTopOf="@+id/old_pass_edit_settings"
        app:layout_constraintStart_toStartOf="@+id/old_pass_edit_settings" />

    <TextView
        android:id="@+id/new_pass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_pass"
        app:layout_constraintBottom_toTopOf="@+id/new_pass_edit_settings"
        app:layout_constraintStart_toStartOf="@+id/new_pass_edit_settings" />

    <TextView
        android:id="@+id/repeat_pass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_new_pass"
        app:layout_constraintBottom_toTopOf="@+id/repeat_pass_edit_settings"
        app:layout_constraintStart_toStartOf="@+id/repeat_pass_edit_settings" />

    <TextView
        android:id="@+id/image_quality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/image_quality"
        app:layout_constraintBottom_toTopOf="@+id/high"
        app:layout_constraintStart_toStartOf="@+id/repeat_pass_edit_settings" />

    <TextView
        android:id="@+id/title_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tittle_settings"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_settings"
        app:layout_constraintEnd_toEndOf="@+id/toolbar_settings"
        app:layout_constraintStart_toStartOf="@+id/toolbar_settings"
        app:layout_constraintTop_toTopOf="@+id/toolbar_settings" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/save_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/repeat_pass_edit_settings"
        app:layout_constraintStart_toStartOf="@+id/repeat_pass_edit_settings" />

    <CheckBox
        android:id="@+id/original"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="Original"
        app:layout_constraintBaseline_toBaselineOf="@+id/high"
        app:layout_constraintEnd_toStartOf="@+id/high"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="High"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toStartOf="@+id/low"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/original"
        app:layout_constraintTop_toBottomOf="@+id/repeat_pass_edit_settings"
        app:layout_constraintVertical_bias="0.037" />

    <CheckBox
        android:id="@+id/low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="Low"
        app:layout_constraintBaseline_toBaselineOf="@+id/high"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/high" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>