<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/homeMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:contentDescription="@string/menu"
            android:padding="12dp"
            app:srcCompat="@drawable/white_more"
            tools:layout_editor_absoluteX="373dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/toolbarHome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Home"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="154dp"
            tools:layout_editor_absoluteY="18dp" />


    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/tabOptions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintTop_toBottomOf="@id/toolbarHome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/home_nav_menu" />

    <TextView
        android:id="@+id/listProjectTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/list_project_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabOptions" />

    <ImageButton
        android:id="@+id/home_search"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:layout_marginEnd="12dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/menu"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/listOfProjects"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabOptions"
        app:srcCompat="@drawable/home_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listOfProjects"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@id/addProjectButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listProjectTitle"
        app:layout_constraintVertical_bias="0.00999999" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addProjectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/white_add" />

    <EditText
        android:id="@+id/searchText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/search_project"
        android:inputType="textPersonName"
        android:paddingLeft="3dp"
        android:paddingTop="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/home_search"
        app:layout_constraintEnd_toStartOf="@+id/home_search"
        app:layout_constraintStart_toEndOf="@+id/listProjectTitle"
        app:layout_constraintTop_toTopOf="@+id/home_search" />


</androidx.constraintlayout.widget.ConstraintLayout>

